--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,15 @@
-title: "Mysqueesh"
+# _config.yml
+
+title: "Anisa Mysqueesh"
 description: "Visual Artist & Game Developer"
 theme: minima
+
+# Navigation menu items — pages you’ll create
+header_pages:
+  - about.md
+  - projects.md
+  - art.md
+  - contact.md
+
+# Optional: show last updated date on posts/pages
+show_last_updated_at: true
