--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title: "Anisa Davis"
 description: "Visual Artist & Game Developer"
-theme: minima
+theme: minimal
 
 # Navigation menu items — pages you’ll create
 header_pages:
